Рефакторинг сервиса
